--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -427,7 +427,7 @@
         flex-direction: column;
 
         @include mobile {
-            gap: 20px;
+            gap: 30px;
             visibility: hidden;
             opacity: 0;
             position: absolute;
@@ -637,14 +637,14 @@
         &-catalog {
             width: auto;
 
-            @include mobile{
+            @include mobile {
                 width: 100%;
             }
 
             .catalog__header {
                 display: none;
 
-                @include mobile{
+                @include mobile {
                     display: flex;
                 }
             }
@@ -663,20 +663,25 @@
                 border-radius: 0;
             }
 
+            .catalog__header .catalog__tab_btn {
+                width: 88px;
+                padding: 4px;
+            }
+
             .catalog__tab_btn {
                 width: 88px;
                 padding: 4px;
 
-                @include mobile{
+                @include mobile {
                     width: 100%;
-                    padding: 10px;
+                    padding: 20px;
                 }
             }
 
             .catalog__tab_svg {
                 height: 20px;
 
-                @include mobile{
+                @include mobile {
                     height: 25px;
                 }
             }
@@ -684,7 +689,7 @@
             .catalog__tab_title {
                 font-size: 10px;
 
-                @include mobile{
+                @include mobile {
                     font-size: 18px;
                 }
             }
@@ -1089,7 +1094,7 @@
         visibility: visible;
     }
 
-    @include mobile{
+    @include mobile {
         top: 64px;
     }
 }
