--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -1186,7 +1186,7 @@
                         </div>
 
                     </div>
-                    <!-- <div class="catalog__bg"></div> -->
+                    <div class="catalog__bg"></div>
 
                 </div>
             </div>
