--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -1,57 +1,57 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    font-family: $font-inter;
-    background-color: $dark;
-    color: $text-white;
-    font-weight: 400;
+  font-family: $font-inter;
+  background-color: $dark;
+  color: $text-white;
+  font-weight: 400;
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
-    @include mobile {
-        background-color: #1C1B19;
-    }
+  @include mobile {
+    background-color: #1c1b19;
+  }
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    color: $text-dark;
-    transition: 300ms ease;
+  color: $text-dark;
+  transition: 300ms ease;
 
-    &:hover {
-        color: $text-white;
-        text-decoration: none;
-    }
+  &:hover {
+    color: $text-white;
+    text-decoration: none;
+  }
 }
 
 svg path {
-    transition: 200ms ease;
+  transition: 200ms ease;
 }
 
 button {
-    font-family: $font-inter;
-    background-color: transparent;
-    border: 1px solid transparent;
+  font-family: $font-inter;
+  background-color: transparent;
+  border: 1px solid transparent;
 
-    &:focus {
-        outline: 1px solid transparent;
-        border: 1px solid transparent;
-    }
+  &:focus {
+    outline: 1px solid transparent;
+    border: 1px solid transparent;
+  }
 }
 
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 h1,
@@ -60,190 +60,187 @@ h3,
 h4,
 h5,
 h6 {
-    line-height: 1.3;
-    margin-bottom: 0;
+  line-height: 1.3;
+  margin-bottom: 0;
 }
 
 h1 {
-    font-size: 42px;
+  font-size: 42px;
 }
 
 h2 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 h3 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 h4 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 input,
 textarea {
-    width: 100%;
-    border-radius: 9px;
-    border: 1px solid transparent;
-    padding: 10px;
-    background: transparent;
-    color: $text-white;
-    transition: 300ms ease;
+  width: 100%;
+  border-radius: 9px;
+  border: 1px solid transparent;
+  padding: 10px;
+  background: transparent;
+  color: $text-white;
+  transition: 300ms ease;
 
-    border-radius: 4px;
+  border-radius: 4px;
 
-    &:focus {
-        outline: none;
-        border: 1px solid $orange;
-    }
+  &:focus {
+    outline: none;
+    border: 1px solid $orange;
+  }
 
-    &:hover {
-        border-color: $orange;
-
-        &::placeholder {
-            color: white;
-        }
-    }
+  &:hover {
+    border-color: $orange;
 
     &::placeholder {
-        color: $text-dark;
+      color: white;
     }
+  }
+
+  &::placeholder {
+    color: $text-dark;
+  }
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input.input-radio {
+    --active-inner: #ff6c3d;
+    --border: #847f7d;
+    --border-hover: #ff6c3d;
+    --background: #847f7d;
+    --disabled: #f6f8ff;
+    --disabled-inner: #e1e6f9;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 20px;
+    outline: none;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
     margin: 0;
-}
+    cursor: pointer;
+    color: $text-dark;
+    border: 1px solid #847f7d;
+    background: #4f4f4f50;
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
 
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-@supports(-webkit-appearance: none) or (-moz-appearance: none) {
-
-    input.input-radio {
-        --active-inner: #FF6C3D;
-        --border: #847F7D;
-        --border-hover: #FF6C3D;
-        --background: #847F7D;
-        --disabled: #F6F8FF;
-        --disabled-inner: #E1E6F9;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        height: 20px;
-        outline: none;
-        display: inline-block;
-        vertical-align: top;
-        position: relative;
-        margin: 0;
-        cursor: pointer;
-        color: $text-dark;
-        border: 1px solid #847F7D;
-        background: #4F4F4F50;
-        transition: background .3s, border-color .3s, box-shadow .2s;
-
-        &~span {
-            color: $text-dark;
-            transition: 300ms ease;
-            font-size: 12px;
-            font-family: $font-inter;
-        }
-
-        &:after {
-            content: '';
-            display: block;
-            left: 50%;
-            top: 50%;
-            position: absolute;
-            transform: scale(0.8) translate(-50%, -50%);
-            transform-origin: left top;
-            transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
-        }
-
-        &:checked {
-            background-color: transparent;
-            box-shadow: 0 0 20px -3px $orange;
-
-            &~span {
-                color: white;
-            }
-        }
-
-        &:focus {
-            box-shadow: 0 0 20px -3px $orange;
-        }
-
-        &:not(.switch) {
-            width: 20px;
-
-            &:after {
-                opacity: var(--o, 0);
-            }
-
-            &:checked {
-                --o: 1;
-            }
-        }
-
-        &:disabled {
-            --b: var(--disabled);
-            cursor: not-allowed;
-            opacity: .9;
-
-            &:checked {
-                --b: var(--disabled-inner);
-                --bc: var(--border);
-            }
-
-            &+label {
-                cursor: not-allowed;
-            }
-        }
-
-        &:hover {
-            &:not(:checked) {
-                &:not(:disabled) {
-                    --bc: var(--border-hover);
-                }
-            }
-
-            &~span {
-                color: white;
-            }
-        }
-
-
+    & ~ span {
+      color: $text-dark;
+      transition: 300ms ease;
+      font-size: 12px;
+      font-family: $font-inter;
     }
 
-    input.input-radio {
-        border-radius: 50%;
-
-        &:after {
-            width: 18px;
-            height: 18px;
-            border-radius: 50%;
-            background: var(--active-inner);
-            opacity: 0;
-            transform: scale(0.8) translate(-50%, -50%);
-        }
-
-        &:checked {
-            --s: .5;
-        }
-
-        &:hover {
-            border-color: $orange;
-        }
+    &:after {
+      content: "";
+      display: block;
+      left: 50%;
+      top: 50%;
+      position: absolute;
+      transform: scale(0.8) translate(-50%, -50%);
+      transform-origin: left top;
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease),
+        opacity var(--d-o, 0.2s);
     }
 
+    &:checked {
+      background-color: transparent;
+      box-shadow: 0 0 20px -3px $orange;
+
+      & ~ span {
+        color: white;
+      }
+    }
+
+    &:focus {
+      box-shadow: 0 0 20px -3px $orange;
+    }
+
+    &:not(.switch) {
+      width: 20px;
+
+      &:after {
+        opacity: var(--o, 0);
+      }
+
+      &:checked {
+        --o: 1;
+      }
+    }
+
+    &:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: 0.9;
+
+      &:checked {
+        --b: var(--disabled-inner);
+        --bc: var(--border);
+      }
+
+      & + label {
+        cursor: not-allowed;
+      }
+    }
+
+    &:hover {
+      &:not(:checked) {
+        &:not(:disabled) {
+          --bc: var(--border-hover);
+        }
+      }
+
+      & ~ span {
+        color: white;
+      }
+    }
+  }
+
+  input.input-radio {
+    border-radius: 50%;
+
+    &:after {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      background: var(--active-inner);
+      opacity: 0;
+      transform: scale(0.8) translate(-50%, -50%);
+    }
+
+    &:checked {
+      --s: 0.5;
+    }
+
+    &:hover {
+      border-color: $orange;
+    }
+  }
 }
 
 .input-label {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-    cursor: pointer;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  cursor: pointer;
 }
