--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
 // Colors
-$text-dark: #847F7D;
-$text-white: #FFFEFC;
-$orange: #FF6C3D;
-$purple: #7A87FF;
-$dark: #1C1B19;
+$text-dark: #847f7d;
+$text-white: #fffefc;
+$orange: #ff6c3d;
+$purple: #7a87ff;
+$dark: #1c1b19;
 
-$font-inter: 'Inter', sans-serif;
-$font-roboto: 'Roboto', sans-serif;
-$font-rubik: 'Rubik', sans-serif;
+$font-inter: "Inter", sans-serif;
+$font-roboto: "Roboto", sans-serif;
+$font-rubik: "Rubik", sans-serif;
