new index pre finished

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -37,3 +37,8 @@
 /* partials */
 @import "partials/new-catalog";
 @import "partials/new-steam";
+@import "partials/new-mobile";
+@import "partials/new-advantages";
+@import "partials/new-blog";
+@import "partials/new-reviews";
+@import "sections/new-footer";
