--- a/src/partials/new-steam.html
+++ b/src/partials/new-steam.html
@@ -61,22 +61,54 @@
         <div class="new-refill-services__content swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/1.png" alt="">
+                    </a>
                 </div>
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/2.png" alt="">
+                    </a>
                 </div>
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/3.png" alt="">
+                    </a>
                 </div>
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/4.png" alt="">
+                    </a>
                 </div>
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/5.png" alt="">
+                    </a>
                 </div>
                 <div class="swiper-slide">
-
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/6.png" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/7.png" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/1.png" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/2.png" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="new-refill-services__item" href="#">
+                        <img class="new-refill-services__item_img" src="assets/images/new-services/3.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
