--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -20,6 +20,19 @@
   }
 }
 
+.main-new {
+  background: #0e0d0c;
+
+  padding-top: 106px;
+  padding-bottom: 40px;
+  position: relative;
+  z-index: 3;
+
+  @include mobile {
+    padding-top: 64px;
+  }
+}
+
 .row-border {
   width: 100%;
   height: 1px;
