--- a/src/assets/scss/partials/_new-catalog.scss
+++ b/src/assets/scss/partials/_new-catalog.scss
@@ -1,9 +1,10 @@
-.new-catalog {
+.new-catalog,
+.new-mobile {
   padding: 25px;
   background-color: #191816;
   border-radius: 24px;
-  margin-bottom: 40px;
-  margin-top: 40px;
+  margin-top: 50px;
+  margin-bottom: 80px;
 
   &__header {
     display: flex;
@@ -69,12 +70,13 @@
     display: flex;
     align-items: flex-start;
     gap: 15px;
+    font-family: $font-roboto;
 
     &_icon {
       width: auto;
       height: 24px;
       object-fit: contain;
-      margin-top: 10px;
+      margin-top: 8px;
     }
 
     &_text {
@@ -96,4 +98,13 @@
   padding: 5px;
   width: 47px;
   height: 47px;
+  transition: none;
+
+  &:hover {
+    background: #ebe2d0;
+
+    svg path {
+      fill: #22211e;
+    }
+  }
 }
