--- a/src/assets/scss/partials/_new-steam.scss
+++ b/src/assets/scss/partials/_new-steam.scss
@@ -37,6 +37,12 @@
     background: #22211e;
     padding: 20px;
     position: relative;
+    font-family: $font-roboto;
+    transition: 300ms ease;
+
+    &:hover {
+      background: #2c2b27;
+    }
 
     &_heading {
     }
@@ -73,6 +79,26 @@
 
     &--discount {
       text-align: center;
+      background: rgb(67, 53, 47);
+      background: linear-gradient(
+        45deg,
+        rgba(67, 53, 47, 1) 0%,
+        rgba(49, 45, 42, 1) 20%,
+        rgba(49, 45, 42, 1) 80%,
+        rgba(67, 53, 47, 1) 100%
+      );
+      transition: 300ms ease;
+
+      &:hover {
+        background: rgb(54, 38, 30);
+        background: linear-gradient(
+          45deg,
+          rgba(54, 38, 30, 1) 0%,
+          rgba(32, 26, 22, 1) 20%,
+          rgba(32, 26, 22, 1) 80%,
+          rgba(54, 38, 30, 1) 100%
+        );
+      }
     }
 
     &--partner {
@@ -104,12 +130,22 @@
     align-items: center;
     justify-content: space-between;
   }
-  &__block {
+  &__item {
+    width: 100%;
+    max-width: 170px;
+    display: flex;
+
+    &_img {
+      height: 100px;
+      object-fit: contain;
+    }
   }
-  &__block {
+  &__content {
+    margin-top: 30px;
   }
-  &__block {
-  }
-  &__block {
+
+  .swiper-slide {
+    display: flex;
+    max-width: 170px;
   }
 }
