--- a/src/partials/new-blog.html
+++ b/src/partials/new-blog.html
@@ -16,7 +16,7 @@
             <div class="new-blog__blog_heading">
                 <div class="new-block__title">
                     <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                    <div class="new-block__title_text">Последнее в блоге</div>
+                    <a href="#" class="new-block__title_text">Последнее в блоге</a>
                 </div>
                 <div class="new-catalog__arrows">
                     <button type="button" class="new-arrow-left">
