--- a/src/partials/new-mobile.html
+++ b/src/partials/new-mobile.html
@@ -3,7 +3,7 @@
         <div class="new-mobile__header">
             <div class="new-block__title">
                 <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                <div class="new-block__title_text">Мобильные игры</div>
+                <a href="#" class="new-block__title_text">Мобильные игры</a>
             </div>
             <div class="new-mobile__search"></div>
             <div class="new-mobile__arrows">
