--- a/src/partials/new-reviews.html
+++ b/src/partials/new-reviews.html
@@ -4,7 +4,7 @@
             <div class="new-reviews__title">
                 <div class="new-block__title">
                     <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                    <div class="new-block__title_text">Отзывы на других ресурсах</div>
+                    <a href="#" class="new-block__title_text">Отзывы на других ресурсах</a>
                 </div>
             </div>
             <div class="new-reviews__cards">
