--- a/src/partials/new-steam.html
+++ b/src/partials/new-steam.html
@@ -3,7 +3,7 @@
         <div class="new-steam__heading">
             <div class="new-block__title">
                 <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                <div class="new-block__title_text">Пополение баланса Steam</div>
+                <a href="#" class="new-block__title_text">Пополение баланса Steam</a>
             </div>
             <div class="new-steam__heading_img">
                 <img src="../assets/images/new-steam/heading-bg.png" alt="">
@@ -39,7 +39,7 @@
         <div class="new-refill-services__header">
             <div class="new-block__title">
                 <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                <div class="new-block__title_text">Пополение сервисов</div>
+                <a href="#" class="new-block__title_text">Пополение сервисов</a>
             </div>
             <div class="new-refill-services__arrows">
                 <button type="button" class="new-arrow-left">
