--- a/src/partials/new-catalog.html
+++ b/src/partials/new-catalog.html
@@ -3,9 +3,27 @@
         <div class="new-catalog__header">
             <div class="new-block__title">
                 <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
-                <div class="new-block__title_text">Каталог игр</div>
+                <a href="#" class="new-block__title_text">Каталог игр</a>
             </div>
-            <div class="new-catalog__search"></div>
+            <div class="new-catalog__search">
+                <div class="new-catalog__search_input">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                        <g clip-path="url(#clip0_3042_52726)">
+                            <path
+                                d="M7.15548 -0.0546875C3.18635 -0.0546875 -0.046875 3.17853 -0.046875 7.14768C-0.046875 11.1168 3.18635 14.3563 7.15548 14.3563C8.85081 14.3563 10.41 13.7622 11.6423 12.7757L14.6424 15.7742C14.7938 15.9194 14.996 15.9994 15.2057 15.9973C15.4154 15.9951 15.6159 15.911 15.7643 15.7628C15.9127 15.6146 15.9972 15.4142 15.9996 15.2045C16.0021 14.9948 15.9223 14.7925 15.7774 14.6409L12.7773 11.6408C13.7646 10.4066 14.3594 8.84497 14.3594 7.14768C14.3594 3.17853 11.1246 -0.0546875 7.15548 -0.0546875ZM7.15548 1.54621C10.2594 1.54621 12.757 4.04372 12.757 7.14768C12.757 10.2516 10.2594 12.7554 7.15548 12.7554C4.05152 12.7554 1.554 10.2516 1.554 7.14768C1.554 4.04372 4.05152 1.54621 7.15548 1.54621Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_3042_52726">
+                                <rect width="16" height="16" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <input placeholder="Найти" type="text" class="new-catalog__search_input_item">
+                </div>
+                <button class="new-catalog__search_button _active">Ключами</button>
+                <button class="new-catalog__search_button">Гифтами</button>
+            </div>
             <div class="new-catalog__arrows">
                 <button type="button" class="new-arrow-left">
                     <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
