--- a/src/partials/new-blog.html
+++ b/src/partials/new-blog.html
@@ -4,18 +4,18 @@
             <div class="new-blog__card new-blog__knowledge">
                 <div class="new-blog__card_title">База знаний</div>
                 <a href="#" class="new-blog__card_button">Найти ответ</a>
-                <img class="new-blog__card_img" src="../assets/images/new-blog/1.png" alt="">
+                <img class="new-blog__card_img" src="assets/images/new-blog/1.png" alt="">
             </div>
             <div class="new-blog__card new-blog__support">
                 <div class="new-blog__card_title">Техническая поддержка</div>
                 <a href="#" class="new-blog__card_button">Оставить заявку</a>
-                <img class="new-blog__card_img" src="../assets/images/new-blog/2.png" alt="">
+                <img class="new-blog__card_img" src="assets/images/new-blog/2.png" alt="">
             </div>
         </div>
         <div class="new-blog__blog swiper">
             <div class="new-blog__blog_heading">
                 <div class="new-block__title">
-                    <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
+                    <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
                     <a href="#" class="new-block__title_text">Последнее в блоге</a>
                 </div>
                 <div class="new-catalog__arrows">
@@ -41,7 +41,7 @@
                     <div class="new-blog-card">
                         <div class="new-blog-card__block">
                             <a class="new-blog-card__img" href="#">
-                                <img src="../assets/images/new-blog/3.png" class="new-blog-card__img_item"
+                                <img src="assets/images/new-blog/3.png" class="new-blog-card__img_item"
                                     alt="Изображения">
                             </a>
                             <div class="new-blog-card__content">
@@ -68,7 +68,7 @@
                     <div class="new-blog-card">
                         <div class="new-blog-card__block">
                             <a class="new-blog-card__img" href="#">
-                                <img src="../assets/images/new-blog/3.png" class="new-blog-card__img_item"
+                                <img src="assets/images/new-blog/3.png" class="new-blog-card__img_item"
                                     alt="Изображения">
                             </a>
                             <div class="new-blog-card__content">
@@ -96,7 +96,7 @@
                     <div class="new-blog-card">
                         <div class="new-blog-card__block">
                             <a class="new-blog-card__img" href="#">
-                                <img src="../assets/images/new-blog/3.png" class="new-blog-card__img_item"
+                                <img src="assets/images/new-blog/3.png" class="new-blog-card__img_item"
                                     alt="Изображения">
                             </a>
                             <div class="new-blog-card__content">
