--- a/src/partials/new-footer.html
+++ b/src/partials/new-footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="mail-sub__block">
             <div class="mail-sub__heading">
-                <img class="mail-sub__heading_icon" src="../assets/images/new-footer/1.png" alt="Иконка">
+                <img class="mail-sub__heading_icon" src="assets/images/new-footer/1.png" alt="Иконка">
                 <div class="mail-sub__heading_block">
                     <div class="mail-sub__heading_title">Рассылка GameBis.com</div>
                     <div class="mail-sub__heading_text">Игровые новости, акции, скидки, бонусы</div>
@@ -63,7 +63,7 @@
             </div>
             <div class="new-footer__footer">
                 <div class="new-footer__logo">
-                    <img class="new-footer__logo_img" src="../assets/images/new-footer/logo.svg" alt="">
+                    <img class="new-footer__logo_img" src="assets/images/new-footer/logo.svg" alt="">
                     <div class="new-footer__logo_title">Game<span class="new-footer__logo_title--active">Bis</span>
                     </div>
                 </div>
