--- a/src/partials/new-reviews.html
+++ b/src/partials/new-reviews.html
@@ -3,7 +3,7 @@
         <div class="new-reviews__heading">
             <div class="new-reviews__title">
                 <div class="new-block__title">
-                    <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
+                    <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
                     <a href="#" class="new-block__title_text">Отзывы на других ресурсах</a>
                 </div>
             </div>
