--- a/src/partials/new-steam.html
+++ b/src/partials/new-steam.html
@@ -2,21 +2,21 @@
     <div class="new-steam__block">
         <div class="new-steam__heading">
             <div class="new-block__title">
-                <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
+                <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
                 <a href="#" class="new-block__title_text">Пополение баланса Steam</a>
             </div>
             <div class="new-steam__heading_img">
-                <img src="../assets/images/new-steam/heading-bg.png" alt="">
+                <img src="assets/images/new-steam/heading-bg.png" alt="">
             </div>
         </div>
         <div class="new-steam__cards">
             <div class="new-steam__card new-steam__card--steam">
-                <img class="new-steam__card_icon" src="../assets/images/new-steam/card-steam.svg" alt="">
+                <img class="new-steam__card_icon" src="assets/images/new-steam/card-steam.svg" alt="">
                 <div class="new-steam__card_title">Пополнение По логину</div>
                 <div class="new-steam__card_subtitle">Моментально и безопастно</div>
             </div>
             <div class="new-steam__card new-steam__card--discount">
-                <img class="new-steam__card_icon" src="../assets/images/new-steam/card-discount.svg" alt="">
+                <img class="new-steam__card_icon" src="assets/images/new-steam/card-discount.svg" alt="">
                 <div class="new-steam__card_title">Самый низкий процент пополения</div>
                 <div class="new-steam__card_subtitle">Вы тратите меньше че у наших конкурентов</div>
             </div>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="new-steam__card_img">
                     <img class="new-steam__card_icon new-steam__card_icon--partner"
-                        src="../assets/images/new-steam/card-partner.png" alt="">
+                        src="assets/images/new-steam/card-partner.png" alt="">
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
     <div class="new-refill-services__block">
         <div class="new-refill-services__header">
             <div class="new-block__title">
-                <img class="new-block__title_icon" src="../assets/images/new-catalog/title-logo.svg" alt="">
+                <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
                 <a href="#" class="new-block__title_text">Пополение сервисов</a>
             </div>
             <div class="new-refill-services__arrows">
