--- a/src/partials/new-catalog.html
+++ b/src/partials/new-catalog.html
@@ -6,7 +6,7 @@
                 <a href="#" class="new-block__title_text">Каталог игр</a>
             </div>
             <div class="new-catalog__search">
-                <div class="new-catalog__search_input">
+                <div class="new-search-block">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <g clip-path="url(#clip0_3042_52726)">
                             <path
@@ -19,10 +19,10 @@
                             </clipPath>
                         </defs>
                     </svg>
-                    <input placeholder="Найти" type="text" class="new-catalog__search_input_item">
+                    <input placeholder="Найти" type="text" class="new-catalog__input new-search-block__input">
                 </div>
-                <button class="new-catalog__search_button _active">Ключами</button>
-                <button class="new-catalog__search_button">Гифтами</button>
+                <button class="new-catalog__btn new-btn new-btn--white">Ключами</button>
+                <button class="new-catalog__btn new-btn">Гифтами</button>
             </div>
             <div class="new-catalog__arrows">
                 <button type="button" class="new-arrow-left">
