--- a/src/partials/new-header.html
+++ b/src/partials/new-header.html
@@ -3,7 +3,7 @@
         <div class="new-header__block">
             <div class="new-header__top">
                 <a href="index.html" class="new-header__logo">
-                    <img class="new-header__logo-img" src="../assets/images/new-footer/logo.svg" alt="Логотип">
+                    <img class="new-header__logo-img" src="assets/images/new-footer/logo.svg" alt="Логотип">
                     <span class="new-header__logo-text">Game<span
                             class="new-header__logo-text--active">Bis</span></span>
                 </a>
