--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -2,11 +2,12 @@
 
 <body>
 
-    {{> main-header }}
+    {{> new-header }}
 
     {{> body }}
 
-    {{> main-footer }}
+    {{> new-footer }}
 
 </body>
+
 </html>
