--- a/src/assets/scss/partials/_new-catalog.scss
+++ b/src/assets/scss/partials/_new-catalog.scss
@@ -1,10 +1,16 @@
 .new-catalog,
 .new-mobile {
-  padding: 25px;
   background-color: #191816;
   border-radius: 24px;
-  margin-top: 50px;
-  margin-bottom: 80px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+
+  &__block {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
   &__header {
     display: flex;
@@ -58,10 +64,10 @@
   }
 
   .swiper {
-    padding: 20px 13px !important;
-    width: calc(100% + 30px);
+    padding: 20px 20px !important;
+    width: calc(100% + 40px);
     position: relative;
-    left: -13px;
+    left: -20px;
   }
 }
 
